--- a/themes/vue/layout/index.ejs
+++ b/themes/vue/layout/index.ejs
@@ -13,7 +13,7 @@
     </div><div class="right">
       <h2 class="vue">Tooltwist</h2>
       <h1>
-        <b>contentservice</b><br>
+        <b>formservice</b><br>
         A Tooltwist Component
       </h1>
       <p>
