--- a/themes/vue/layout/partials/toc.ejs
+++ b/themes/vue/layout/partials/toc.ejs
@@ -1,11 +1,20 @@
 <ul class="menu-root">
   <% ['api', 'style-guide'].indexOf(type) === -1 && site.pages.find({type: type}).sort('order').each(function (p) { %>
     <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-    <% if (type === 'guide') { %>
-      <% if (fileName === 'installation') { %>
-        <li><h3>Essentials</h3></li>
+
+    <% if (type === 'client') { %>
+      <% if (fileName === 'index') { %>
+        <li><h3>Client-side</h3></li>
       <% } %>
     <% } %>
+
+    <% if (type === 'server') { %>
+      <% if (fileName === 'index') { %>
+        <li><h3>Server</h3></li>
+      <% } %>
+    <% } %>
+
+
     <li>
       <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
     </li>
